package com.escom.papelio.model;

import lombok.Data;

@Data
public class Author {
    private String authorId;
    private String name;
}
