package com.escom.papelio.model;

import lombok.Data;

@Data
public class ExternalIds {
    private String doi;
    private String arxiv;
    private String pubmed;
}
